# agent-example

./: .env.example  AGENTS.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
cookbook/: README.md  __init__.py
cookbook/00_getting_started/: README.md
cookbook/00_model_setup/: README.md
cookbook/01_agent_loop/: README.md  minimal_agent.py  tool_loop.py
cookbook/01_core_concepts/: README.md
cookbook/01_model/: README.md  minimal_agent.py  model_connection.py
cookbook/02_instructions/: README.md
cookbook/02_tools/: README.md
cookbook/02_tools_mcp/: README.md  order_status_agent.py  tool_mcp_integration.py
cookbook/03_loop_workflow/: README.md  todo_loop.py
cookbook/03_memory/: README.md
cookbook/03_tools/: README.md
cookbook/03_turns/: README.md  conversation_turns.py
cookbook/04_memory/: README.md  memory_agent.py
cookbook/04_rag/: README.md
cookbook/04_workspace/: README.md
cookbook/05_langgraph_workflows/: README.md
cookbook/05_skills/: README.md  skill_agent.py
cookbook/05_state_and_context/: README.md
cookbook/06_multi_agent/: README.md
cookbook/06_planning/: README.md
cookbook/06_sandbox/: README.md  sandbox_agent.py
cookbook/07_planning/: README.md
cookbook/07_subagents/: README.md
cookbook/08_human_approval/: README.md
cookbook/08_production/: README.md
cookbook/09_end_to_end_apps/: README.md
cookbook/09_runtime_boundaries/: README.md
cookbook/10_end_to_end_agents/: README.md
docs/: README.md  recipe-template.md
examples/: README.md
examples/01_model/: README.md  model_connection.py
(+44 files in other folders)
